# 2024S-Operating-Systems-Group-Projects

./: .gitignore  CMakeLists.txt  Makefile  README.md  seconds.c  task_info.c
HW1/: README.md  jiffies.c
HW2/include/: merge_sort.h  sudoku.h
HW2/src/: ProcessScheduler.c
HW3/: CMakeLists.txt
HW3/include/: ch7_4.h
HW3/src/: ch7_4.c  ch8.c  input.txt
include/: merge_sort.h  sudoku.h
src/: ProcessScheduler.c  merge_sort.c  sudoku.c
